--- a/src/sass/openeyes/modules/header/clinic-worklist/rethink/_view-work.scss
+++ b/src/sass/openeyes/modules/header/clinic-worklist/rethink/_view-work.scss
@@ -7,7 +7,7 @@
 // rethink UIX
 // new UIX for header space
 
-.view-work {
+.manage-loaded-worklists {
 	width: 100%;
 	@include flex(stretch, space-between);
 
@@ -50,25 +50,20 @@
 		}
 	}
 
+	// rethink... moved to the header
+	.view-loaded-lists {
+		position: fixed;
+		top: $oe-header-height;
+		left: 0;
+		z-index: $oe-z-shortcuts;
+		width: 350px;
+		overflow-y: auto;
 
-	.date-range {
-		position: relative;
+		border-right:2px solid var(--bg-html);
 
-		.change-date-filter {
-			position: absolute;
-			top: $oe-header-height;
-			left: 0;
-			z-index: $oe-z-shortcuts;
-			background: var(--bg-html);
-			padding: 20px;
-			border-top: 2px solid var(--btn-blue-active);
-			box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
-
-			width: 300px;
-
-			@include font-size(11);
-
+		button {
+			height: $oe-event-header-height;
 		}
-
 	}
+
 }
